# AppliBooker

./: README.md  app.properties
API_Rest_Java/src/: ServeurHTTP.java
API_Rest_Java/src/Handler/: APIAuthorsHandler.java  APIBooksHandler.java  APISubjectsHandler.java  AuthorsHandler.java  BooksHandler.java  HandlerRoot.java  RootHandler.java  SubjectsHandler.java
API_Rest_Java/src/controller/: authors.js  books.js  subjects.js
API_Rest_Java/src/style/: style.css
API_Rest_Java/src/view/: authors.html  books.html  index.html  subjects.html
BD_Books/: CreationBD  CreationBD.cpp
ClientAchatJava/src/: Main.java
ClientBookEncoderJava/src/: Main.java
ClientBookEncoderJava/src/Helpers/: AuthorManager.java  BookManager.java  ConnexionManager.java  RequestBuilder.java  ServerConnection.java  SubjectManager.java  Utils.java
ClientBookEncoderQt/: CMakeLists.txt
ClientBookEncoderQt/include/: OBEP.h  TCP.h  mainwindowclientbookencoder.h
ClientBookEncoderQt/src/: OBEP.cpp  Serveur.cpp  TCP.cpp  main.cpp  mainwindowclientbookencoder.cpp
CommunicationJava/src/: ClientBSPP.java  ServeurBSPP.java
CommunicationJava/src/ProtocoleBSPP/: BSPP.java  ReponseADD_CADDY_ITEM.java  ReponseDELETE_CADDY.java  ReponseDELETE_CADDY_ITEM.java  ReponseGetAuteur.java  ReponseGetBooks.java  ReponseGetCaddy.java  ReponseGetSubjects.java  ReponseINSCRIPTION.java  ReponseLOGIN.java  ReponseRECHERCHER.java  ReponseUPDATE_CADDY_PAYED.java  RequeteADD_CADDY_ITEM.java  RequeteDELETE_CADDY.java  RequeteDELETE_CADDY_ITEM.java  RequeteGetAuteur.java  RequeteGetBooks.java  RequeteGetCaddy.java  RequeteGetSubjects.java  RequeteINSCRIPTION.java  RequeteLOGIN.java  RequeteLOGOUT.java  RequeteRECHERCHER.java  RequeteUPDATE_CADDY_PAYED.java
CommunicationJava/src/ServeurTCP/: FinConnexionException.java  Reponse.java  Requete.java  ThreadClientDemande.java  ThreadServeurDemande.java
CommunicationJavaSecure/Keystore/: privateKeyFeyenAdrien.ser  privateKeyServeur.ser  privateKeyTestAdmin.ser  publicKeyFeyenAdrien.ser  publicKeyServeur.ser  publicKeyTestAdmin.ser
CommunicationJavaSecure/src/: ClientBSPPS.java  ServeurBSPPS.java
CommunicationJavaSecure/src/Crypto/: KeysMaker.java  KeystoreMaker.java  MyCrypto.java
CommunicationJavaSecure/src/ProtocoleBSPPS/: BSPP.java  BSPPS.java  ReponseADD_CADDY_ITEM.java  ReponseDELETE_CADDY.java  ReponseDELETE_CADDY_ITEM.java  ReponseGetAuteur.java  ReponseGetBooks.java  ReponseGetCaddy.java  ReponseGetSubjects.java  ReponseINSCRIPTION.java  ReponseLOGIN.java  ReponseRECHERCHER.java  ReponseUPDATE_CADDY_PAYED.java  RequeteADD_CADDY_ITEM.java  RequeteDELETE_CADDY.java  RequeteDELETE_CADDY_ITEM.java  RequeteGetAuteur.java  RequeteGetBooks.java  (+7 more)
Serveur/: CMakeLists.txt
Serveur/src/: Serveur.cpp
(+80 files in other folders)
